--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,19 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.restdocs</groupId>
+            <artifactId>spring-restdocs-mockmvc</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-ui -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.5.10</version>
+        </dependency>
+
 
         <dependency>
             <groupId>commons-io</groupId>
@@ -56,6 +69,74 @@
                     </excludes>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.asciidoctor</groupId>
+                <artifactId>asciidoctor-maven-plugin</artifactId>
+                <version>2.2.1</version>
+                <executions>
+                    <execution>
+                        <id>generate-docs</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>process-asciidoc</goal>
+                        </goals>
+                        <configuration>
+                            <sourceDocumentName>api-guide.adoc</sourceDocumentName>
+<!--                            <sourceDirectory>src/docs/asciidoc/generated-snippets</sourceDirectory>-->
+                            <backend>pdf</backend>
+<!--                            <attributes>-->
+<!--                                <snippets>${project.build.directory}/target/generated-snippets</snippets>-->
+<!--                            </attributes>-->
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+<!--            <plugin>-->
+<!--                <groupId>org.asciidoctor</groupId>-->
+<!--                <artifactId>asciidoctor-maven-plugin</artifactId>-->
+<!--                <version>2.2.1</version>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <id>convert-to-html</id>-->
+<!--                        <phase>generate-resources</phase>-->
+<!--                        <goals>-->
+<!--                            <goal>process-asciidoc</goal>-->
+<!--                        </goals>-->
+<!--                        <configuration>-->
+<!--                            <outputDirectory>${project.build.directory}/html</outputDirectory>-->
+<!--                            <attributes>-->
+<!--                                <source-highlighter>coderay</source-highlighter>-->
+<!--                                <imagesdir>./images</imagesdir>-->
+<!--                                <toc>left</toc>-->
+<!--                                <icons>font</icons>-->
+<!--                            </attributes>-->
+<!--                        </configuration>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--            </plugin>-->
+
+            <plugin>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-maven-plugin</artifactId>
+                <version>1.3</version>
+                <executions>
+                    <execution>
+                        <id>integration-test</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+<!--                    <apiDocsUrl>http://localhost:8080/v3/api-docs</apiDocsUrl>-->
+<!--                    <outputFileName>openapi.json</outputFileName>-->
+<!--                    <outputDir>${project.build.directory}/qqq</outputDir>-->
+                    <outputDir>${project.basedir}</outputDir>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
