--------------------- 	@Bean 	public OpenAPI customOpenApi(@Value("${application-description}")String appDescription, 	                             @Value("${application-version}")String appVersion
------------------
README.md
Swagger. REST APIs Documentation\
[openapi.json](openapi.json)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@
 
 #springdoc.api-docs.path=/api-docs
 
+application-description=application description----------
+application-version=66.66.666.66.6---------
