--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,35 @@
+#spring.profiles.active=@activatedProperties@
+#spring.profiles.active=postgres
 
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.connection-timeout=3000
+
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto = create
+spring.jpa.show-sql=true
+
+#spring.liquibase.enabled=true
+spring.liquibase.change-log=liquibase-changeLog.xml
 
 #springdoc.api-docs.path=/api-docs
 
 application-description=application description----------
 application-version=66.66.666.66.6---------
+
+
+#spring.config.activate.on-profile=postgres
+
+##spring.datasource.url=jdbc:mysql://localhost:3306/jointabletest2
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.username=postgres
+##spring.datasource.username=root
+#spring.datasource.password=q12345
+
+
+#spring.config.activate.on-profile=mysql
+#
+#spring.datasource.url=jdbc:mysql://localhost:3306/jointabletest2
+##spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+##spring.datasource.username=postgres
+#spring.datasource.username=root
+#spring.datasource.password=q12345
