to work with changes from both Cmd and Spring the names MUST BE THE SAME:
liquibase.properties:
changeLogFile=liquibase-changeLog.xml

application.properties:
spring.liquibase.change-log=liquibase-changeLog.xml

------------------------------------------------------------

maven + spring profiles hell....

--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -1,4 +1,4 @@
-spring.config.activate.on-profile=mysql
+#spring.config.activate.on-profile=mysql
 
 spring.datasource.url=jdbc:mysql://localhost:3306/jointabletest2
 #spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
