--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#spring.profiles.active=@activatedProperties@
+spring.profiles.active=@qqq@
 #spring.profiles.active=postgres
 
 spring.datasource.hikari.maximum-pool-size=10
@@ -10,6 +10,9 @@ spring.jpa.show-sql=true
 
 #spring.liquibase.enabled=true
 spring.liquibase.change-log=liquibase-changeLog.xml
+#spring.liquibase.url=jdbc:postgresql://localhost:5432/postgres
+#spring.liquibase.user=postgres
+#spring.liquibase.password=q12345
 
 #springdoc.api-docs.path=/api-docs
 
