--- a/pom.xml
+++ b/pom.xml
@@ -17,53 +17,6 @@
         <java.version>1.8</java.version>
     </properties>
 
-    <profiles>
-        <profile>
-            <id>postgres</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-                <property>
-                    <name>spring.profiles.active</name>
-                    <value>postgres</value>
-                </property>
-            </activation>
-            <properties>
-                <activatedProperties>postgres</activatedProperties>
-            </properties>
-            <dependencies>
-                <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
-                <dependency>
-                    <groupId>org.postgresql</groupId>
-                    <artifactId>postgresql</artifactId>
-                    <version>42.2.23</version>
-                </dependency>
-            </dependencies>
-        </profile>
-
-        <profile>
-            <id>mysql</id>
-<!--            <activation>-->
-<!--                <activeByDefault>true</activeByDefault>-->
-<!--                <property>-->
-<!--                    <name>spring.profiles.active</name>-->
-<!--                    <value>mysql</value>-->
-<!--                </property>-->
-<!--            </activation>-->
-<!--            <properties>-->
-<!--                <activatedProperties>mysql</activatedProperties>-->
-<!--            </properties>-->
-            <dependencies>
-                <dependency>
-                    <groupId>mysql</groupId>
-                    <artifactId>mysql-connector-java</artifactId>
-                    <version>8.0.26</version>
-                </dependency>
-            </dependencies>
-        </profile>
-
-
-    </profiles>
-
     <dependencies>
 
 <!--        <dependency>-->
@@ -98,11 +51,11 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-test</artifactId>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>org.springframework.restdocs</groupId>
@@ -134,6 +87,52 @@
             <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
     </dependencies>
+
+    <profiles>
+        <profile>
+            <id>mysql1</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+                <property>
+                    <name>spring.profiles.active</name>
+                    <value>mysql</value>
+                </property>
+            </activation>
+            <properties>
+                <qqq>mysql</qqq>
+            </properties>
+            <dependencies>
+                <dependency>
+                    <groupId>mysql</groupId>
+                    <artifactId>mysql-connector-java</artifactId>
+                    <version>8.0.26</version>
+                </dependency>
+            </dependencies>
+        </profile>
+
+        <profile>
+            <id>postgres1</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+                <property>
+                    <name>spring.profiles.active</name>
+                    <value>postgres</value>
+                </property>
+            </activation>
+            <properties>
+                <qqq>postgres</qqq>
+            </properties>
+            <dependencies>
+                <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+                <dependency>
+                    <groupId>org.postgresql</groupId>
+                    <artifactId>postgresql</artifactId>
+                    <version>42.2.23</version>
+                </dependency>
+            </dependencies>
+        </profile>
+    </profiles>
+
 
     <build>
         <plugins>
@@ -216,6 +215,18 @@
                     <outputDir>${project.basedir}</outputDir>
                 </configuration>
             </plugin>
+
+
+
+                <plugin>
+                    <groupId>org.liquibase</groupId>
+                    <artifactId>liquibase-maven-plugin</artifactId>
+                    <version>4.3.5</version>
+                    <configuration>
+                        <propertyFile>src/main/resources/liquibase.properties</propertyFile>
+                    </configuration>
+                </plugin>
+
 
         </plugins>
     </build>
