--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.profiles.active=@qqq@
-#spring.profiles.active=postgres
+spring.profiles.active=@mavenProfile1@
+#spring.profiles.active=dev
 
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.connection-timeout=3000
