--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,9 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.5.6</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/>
     </parent>
-    <groupId>com.example</groupId>
+    <groupId>com.osdb</groupId>
     <artifactId>OctiPod</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>OctiPod</name>
@@ -21,82 +21,24 @@
 
         <profile>
             <id>local</id>
-<!--            <activation>-->
-<!--                <activeByDefault>false</activeByDefault>-->
-<!--                <property>-->
-<!--                    <name>spring.profiles.active</name>-->
-<!--                    <value>mysql</value>-->
-<!--                </property>-->
-<!--            </activation>-->
             <properties>
-                <mavenProfile1>local</mavenProfile1>
+                <myMavenProfile>local</myMavenProfile>
             </properties>
-<!--            <dependencies>-->
-<!--                <dependency>-->
-<!--                    <groupId>mysql</groupId>-->
-<!--                    <artifactId>mysql-connector-java</artifactId>-->
-<!--                    <version>8.0.26</version>-->
-<!--                </dependency>-->
-<!--            </dependencies>-->
         </profile>
 
         <profile>
             <id>dev</id>
             <properties>
-                <mavenProfile1>dev</mavenProfile1>
+                <myMavenProfile>dev</myMavenProfile>
             </properties>
         </profile>
 
         <profile>
             <id>stage</id>
             <properties>
-                <mavenProfile1>stage</mavenProfile1>
+                <myMavenProfile>stage</myMavenProfile>
             </properties>
         </profile>
-
-
-<!--        <profile>-->
-<!--            <id>mysql1</id>-->
-<!--            <activation>-->
-<!--                <activeByDefault>false</activeByDefault>-->
-<!--                <property>-->
-<!--                    <name>spring.profiles.active</name>-->
-<!--                    <value>mysql</value>-->
-<!--                </property>-->
-<!--            </activation>-->
-<!--            <properties>-->
-<!--                <qqq>mysql</qqq>-->
-<!--            </properties>-->
-<!--            <dependencies>-->
-<!--                <dependency>-->
-<!--                    <groupId>mysql</groupId>-->
-<!--                    <artifactId>mysql-connector-java</artifactId>-->
-<!--                    <version>8.0.26</version>-->
-<!--                </dependency>-->
-<!--            </dependencies>-->
-<!--        </profile>-->
-
-<!--        <profile>-->
-<!--            <id>postgres1</id>-->
-<!--            <activation>-->
-<!--                <activeByDefault>false</activeByDefault>-->
-<!--                <property>-->
-<!--                    <name>spring.profiles.active</name>-->
-<!--                    <value>postgres</value>-->
-<!--                </property>-->
-<!--            </activation>-->
-<!--            <properties>-->
-<!--                <qqq>postgres</qqq>-->
-<!--            </properties>-->
-<!--            <dependencies>-->
-<!--                &lt;!&ndash; https://mvnrepository.com/artifact/org.postgresql/postgresql &ndash;&gt;-->
-<!--                <dependency>-->
-<!--                    <groupId>org.postgresql</groupId>-->
-<!--                    <artifactId>postgresql</artifactId>-->
-<!--                    <version>42.2.23</version>-->
-<!--                </dependency>-->
-<!--            </dependencies>-->
-<!--        </profile>-->
     </profiles>
 
 
@@ -108,14 +50,6 @@
             <version>42.2.23</version>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>mysql</groupId>-->
-<!--            <artifactId>mysql-connector-java</artifactId>-->
-<!--            <version>8.0.26</version>-->
-<!--        </dependency>-->
-
-
-        <!-- https://mvnrepository.com/artifact/org.liquibase/liquibase-core -->
         <dependency>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
@@ -134,11 +68,6 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-test</artifactId>-->
-<!--            <scope>test</scope>-->
-<!--        </dependency>-->
 
         <dependency>
             <groupId>org.springframework.restdocs</groupId>
@@ -146,7 +75,6 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-ui -->
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-ui</artifactId>
@@ -186,53 +114,6 @@
                 </configuration>
             </plugin>
 
-<!--            <plugin>-->
-<!--                <groupId>org.asciidoctor</groupId>-->
-<!--                <artifactId>asciidoctor-maven-plugin</artifactId>-->
-<!--                <version>2.2.1</version>-->
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <id>generate-docs</id>-->
-<!--                        <phase>prepare-package</phase>-->
-<!--                        <goals>-->
-<!--                            <goal>process-asciidoc</goal>-->
-<!--                        </goals>-->
-<!--                        <configuration>-->
-<!--                            <sourceDocumentName>api-guide.adoc</sourceDocumentName>-->
-<!--&lt;!&ndash;                            <sourceDirectory>src/docs/asciidoc/generated-snippets</sourceDirectory>&ndash;&gt;-->
-<!--                            <backend>pdf</backend>-->
-<!--&lt;!&ndash;                            <attributes>&ndash;&gt;-->
-<!--&lt;!&ndash;                                <snippets>${project.build.directory}/target/generated-snippets</snippets>&ndash;&gt;-->
-<!--&lt;!&ndash;                            </attributes>&ndash;&gt;-->
-<!--                        </configuration>-->
-<!--                    </execution>-->
-<!--                </executions>-->
-<!--            </plugin>-->
-
-<!--            <plugin>-->
-<!--                <groupId>org.asciidoctor</groupId>-->
-<!--                <artifactId>asciidoctor-maven-plugin</artifactId>-->
-<!--                <version>2.2.1</version>-->
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <id>convert-to-html</id>-->
-<!--                        <phase>generate-resources</phase>-->
-<!--                        <goals>-->
-<!--                            <goal>process-asciidoc</goal>-->
-<!--                        </goals>-->
-<!--                        <configuration>-->
-<!--                            <outputDirectory>${project.build.directory}/html</outputDirectory>-->
-<!--                            <attributes>-->
-<!--                                <source-highlighter>coderay</source-highlighter>-->
-<!--                                <imagesdir>./images</imagesdir>-->
-<!--                                <toc>left</toc>-->
-<!--                                <icons>font</icons>-->
-<!--                            </attributes>-->
-<!--                        </configuration>-->
-<!--                    </execution>-->
-<!--                </executions>-->
-<!--            </plugin>-->
-
             <plugin>
                 <groupId>org.springdoc</groupId>
                 <artifactId>springdoc-openapi-maven-plugin</artifactId>
@@ -246,24 +127,9 @@
                     </execution>
                 </executions>
                 <configuration>
-<!--                    <apiDocsUrl>http://localhost:8080/v3/api-docs</apiDocsUrl>-->
-<!--                    <outputFileName>openapi.json</outputFileName>-->
-<!--                    <outputDir>${project.build.directory}/qqq</outputDir>-->
                     <outputDir>${project.basedir}</outputDir>
                 </configuration>
             </plugin>
-
-
-
-                <plugin>
-                    <groupId>org.liquibase</groupId>
-                    <artifactId>liquibase-maven-plugin</artifactId>
-                    <version>4.3.5</version>
-                    <configuration>
-                        <propertyFile>src/main/resources/liquibase.properties</propertyFile>
-                    </configuration>
-                </plugin>
-
 
         </plugins>
     </build>
