--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,38 +1,15 @@
-spring.profiles.active=@mavenProfile1@
-#spring.profiles.active=dev
-
-spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.connection-timeout=3000
+spring.profiles.active=@myMavenProfile@
 
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = none
 spring.jpa.show-sql=true
 
-#spring.liquibase.enabled=true
+spring.datasource.url=jdbc:postgresql://95.217.108.112:5451/postgres
+spring.datasource.username=octipod
+spring.datasource.password=YDRPj943KOtoWOhy
+
+spring.liquibase.enabled=true
 spring.liquibase.change-log=liquibase-changeLog.xml
-#spring.liquibase.url=jdbc:postgresql://localhost:5432/postgres
-#spring.liquibase.user=postgres
-#spring.liquibase.password=q12345
 
-#springdoc.api-docs.path=/api-docs
-
-application-description=application description----------
-application-version=66.66.666.66.6---------
-
-
-#spring.config.activate.on-profile=postgres
-
-##spring.datasource.url=jdbc:mysql://localhost:3306/jointabletest2
-#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-#spring.datasource.username=postgres
-##spring.datasource.username=root
-#spring.datasource.password=q12345
-
-
-#spring.config.activate.on-profile=mysql
-#
-#spring.datasource.url=jdbc:mysql://localhost:3306/jointabletest2
-##spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-##spring.datasource.username=postgres
-#spring.datasource.username=root
-#spring.datasource.password=q12345
+application-description=OctiPod
+application-version=666.666.666
