--- a/src/main/resources/application-stage.properties
+++ b/src/main/resources/application-stage.properties
@@ -1,1 +1,3 @@
-
+spring.datasource.url=jdbc:postgresql://95.217.108.112:5451/postgres
+spring.datasource.username=octipod
+spring.datasource.password=YDRPj943KOtoWOhy
