cors test = questions
jwt impl

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,9 @@ spring.liquibase.change-log=liquibase-changeLog.xml
 
 application-description=OctiPod
 application-version=666.666.666
+
+spring.cache.type=none
+
+jwt.token.secret=jwtappdemo
+jwt.token.expired=3600000
+
