--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,4 +2,4 @@ spring.datasource.url=jdbc:postgresql://95.217.108.112:5451/postgres
 spring.datasource.username=octipod
 spring.datasource.password=YDRPj943KOtoWOhy
 
-
+server.port=8081
