@Bean 	public OperationCustomizer customize() { 		return (operation, handlerMethod) -> { 			boolean isNotGet = !handlerMethod.getMethod().getName().contains("get");
			if(isNotGet) {
				return operation.addParametersItem(
						new Parameter()
								.in(ParameterIn.HEADER.toString())
								.required(false)
								.name("X-XSRF-TOKEN"));
			}

			return null;
		};
	}

--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,9 @@
     </profiles>
 
 
+
+
+
     <dependencies>
 
         <dependency>
@@ -69,12 +72,6 @@
             <optional>true</optional>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.restdocs</groupId>-->
-<!--            <artifactId>spring-restdocs-mockmvc</artifactId>-->
-<!--            <scope>test</scope>-->
-<!--        </dependency>-->
-
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-ui</artifactId>
@@ -88,15 +85,21 @@
             <version>2.11.0</version>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-data-jpa</artifactId>-->
-<!--        </dependency>-->
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <version>2.5.6</version>
+        </dependency>
 
+
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-jdbc -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
+            <version>2.5.6</version>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
@@ -141,6 +144,35 @@
                     <outputDir>${project.basedir}</outputDir>
                 </configuration>
             </plugin>
+
+<!--            <plugin>-->
+<!--                <groupId>org.liquibase</groupId>-->
+<!--                <artifactId>liquibase-maven-plugin</artifactId>-->
+<!--                <version>4.3.5</version>-->
+<!--                <configuration>-->
+<!--                    <propertyFile>src/main/resources/liquibase.properties</propertyFile>-->
+<!--                    <logging>info</logging>-->
+<!--                </configuration>-->
+<!--&lt;!&ndash;                <dependencies>&ndash;&gt;-->
+<!--&lt;!&ndash;                    <dependency>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <groupId>org.liquibase.ext</groupId>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <artifactId>liquibase-hibernate5</artifactId>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <version>4.5.0</version>&ndash;&gt;-->
+<!--&lt;!&ndash;                    </dependency>&ndash;&gt;-->
+
+<!--&lt;!&ndash;&lt;!&ndash;                    <dependency>&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;                        <groupId>org.springframework.boot</groupId>&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;                        <artifactId>spring-boot-starter-data-jpa</artifactId>&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;                        <version>2.5.6</version>&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;                    </dependency>&ndash;&gt;&ndash;&gt;-->
+
+<!--&lt;!&ndash;                    <dependency>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <groupId>javax.validation</groupId>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <artifactId>validation-api</artifactId>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <version>2.0.1.Final</version>&ndash;&gt;-->
+<!--&lt;!&ndash;                    </dependency>&ndash;&gt;-->
+<!--&lt;!&ndash;                </dependencies>&ndash;&gt;-->
+<!--            </plugin>-->
 
         </plugins>
     </build>
