--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,9 @@
-spring.datasource.url=jdbc:postgresql://95.217.108.112:5451/postgres
-spring.datasource.username=octipod
-spring.datasource.password=YDRPj943KOtoWOhy
+#spring.datasource.url=jdbc:postgresql://95.217.108.112:5451/postgres
+#spring.datasource.username=octipod
+#spring.datasource.password=YDRPj943KOtoWOhy
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=q12345
 
 server.port=8081
