--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,13 @@
         <version>2.5.6</version>
         <relativePath/>
     </parent>
+
     <groupId>com.osdb</groupId>
     <artifactId>OctiPod</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>OctiPod</name>
-    <description>OctiPod</description>
+    <version>1.0.0</version>
+    <name>octipod</name>
+    <description>octipod</description>
+
     <properties>
         <java.version>1.8</java.version>
     </properties>
