OPOD-3 - Update Spring Docs configurations.

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,9 +1,7 @@
-#spring.datasource.url=jdbc:postgresql://95.217.108.112:5451/postgres
-#spring.datasource.username=octipod
-#spring.datasource.password=YDRPj943KOtoWOhy
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=q12345
+# datasource
+spring.datasource.url=jdbc:postgresql://95.217.108.112:5432/octipod
+spring.datasource.username=octipod
+spring.datasource.password=YDRPj943KOtoWOhy
 
-server.port=8081
+app.url=http://localhost:8080/
