--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,24 @@
+
+# tomcat
+server.address=0.0.0.0
+server.port=8080
+
+# general
+app.title=OctiPod
+app.description=OctiPod
+app.version=1.0
+
 spring.profiles.active=@myMavenProfile@
 
+# jpa
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto = none
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
+# liquibase
 spring.liquibase.enabled=true
-spring.liquibase.change-log=liquibase-changeLog.xml
+spring.liquibase.change-log=changelogs/migrations.xml
 
-application-description=OctiPod
-application-version=666.666.666
-
-spring.cache.type=none
-
-jwt.token.secret=jwtappdemo
+# jwt (expiration = 1h)
+jwt.token.secret=HDGRzExzsT2ZV0Rx
 jwt.token.expired=3600000
-
