--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:postgresql://95.217.108.112:5432/postgres
+
+# datasource
+spring.datasource.url=jdbc:postgresql://95.217.108.112:5432/octipod
 spring.datasource.username=octipod
 spring.datasource.password=YDRPj943KOtoWOhy
 
-#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-#spring.datasource.username=postgres
-#spring.datasource.password=q12345
+app.url=http://localhost:8080/
