--- a/src/main/resources/application-stage.properties
+++ b/src/main/resources/application-stage.properties
@@ -1,3 +1,7 @@
-spring.datasource.url=jdbc:postgresql://95.217.108.112:5451/postgres
+
+# datasource
+spring.datasource.url=jdbc:postgresql://95.217.108.112:5432/octipod
 spring.datasource.username=octipod
 spring.datasource.password=YDRPj943KOtoWOhy
+
+app.url=http://localhost:8080/
