OPOD-5 - Update configs for different environments/profiles.

--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,9 @@
             <properties>
                 <myMavenProfile>local</myMavenProfile>
             </properties>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
         </profile>
 
         <profile>
