--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,7 +1,9 @@
 
 # datasource
-spring.datasource.url=jdbc:postgresql://95.217.108.112:5432/octipod
-spring.datasource.username=octipod
-spring.datasource.password=YDRPj943KOtoWOhy
+db.host=95.217.108.112
+db.port=5432
+db.username=octipod
+db.password=YDRPj943KOtoWOhy
 
 app.url=http://localhost:8080/
+app.version=1.0
