--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,16 @@
 server.address=0.0.0.0
 server.port=8080
 
+# datasource
+spring.datasource.url=jdbc:postgresql://${db.host}:${db.port}/octipod
+spring.datasource.username=${db.username}
+spring.datasource.password=${db.password}
+
 # general
 app.title=OctiPod
 app.description=OctiPod
-app.version=1.0
+app.version=${app.version}
+app.url=${app.url}
 
 spring.profiles.active=@myMavenProfile@
 
