OPOD-7 - Enable CORS for cross domain request.

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,5 +5,5 @@ db.port=5432
 db.username=octipod
 db.password=YDRPj943KOtoWOhy
 
-app.url=http://localhost:8080/
+app.url=http://localhost:8080
 app.version=1.0
