-------------------- end and begin -----------------------

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,9 +1,9 @@
 
 # datasource
-db.host=95.217.108.112
+db.host=localhost
 db.port=5432
-db.username=octipod
-db.password=YDRPj943KOtoWOhy
+db.username=postgres
+db.password=q12345
 
-app.url=http://localhost:8080/
+app.url=http://localhost:${server.port}/
 app.version=1.0
