--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,19 @@
             <version>${jwt.version}</version>
         </dependency>
 
+        <!--        <dependency>-->
+        <!--            <groupId>org.springframework.restdocs</groupId>-->
+        <!--            <artifactId>spring-restdocs-mockmvc</artifactId>-->
+        <!--            <scope>test</scope>-->
+        <!--        </dependency>-->
+
+
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.data</groupId>-->
+<!--            <artifactId>spring-data-rest-webmvc</artifactId>-->
+<!--        </dependency>-->
+
+
     </dependencies>
 
     <build>
