new Filter by //AUTHOR //		Ioram Gordadze

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@
 server.address=0.0.0.0
 server.port=8080
 
-# datasource
-spring.datasource.url=jdbc:postgresql://${db.host}:${db.port}/octipod
+# datasource /octipod
+spring.datasource.url=jdbc:postgresql://${db.host}:${db.port}/postgres
 spring.datasource.username=${db.username}
 spring.datasource.password=${db.password}
 
