--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <description>octipod</description>
 
     <properties>
-        <java.version>1.8</java.version>
+        <java.version>11</java.version>
         <postgresql.version>42.2.23</postgresql.version>
         <liquibase.version>4.5.0</liquibase.version>
         <springdoc.version>1.5.10</springdoc.version>
@@ -129,6 +129,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.5.6</version>
                 <configuration>
                     <excludes>
                         <exclude>
