//	@Bean //	public SessionAuthenticationStrategy sessionAuthenticationStrategy() { //		return new CompositeSessionAuthenticationStrategy(Arrays.asList( //				new ChangeSessionIdAuthenticationStrategy(), //				new CsrfAuthenticationStrategy(csrfTokenRepository()) //		)); //	}

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,7 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
 # liquibase
-spring.liquibase.enabled=true
+spring.liquibase.enabled=false
 spring.liquibase.change-log=changelogs/migrations.xml
 
 # jwt (expiration = 1h)
