-PUT /api/v1/private/users/{id} -PATCH /api/v1/private/users/{id}

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,9 @@ spring.datasource.url=jdbc:postgresql://${db.host}:${db.port}/postgres
 spring.datasource.username=${db.username}
 spring.datasource.password=${db.password}
 
+# fix for PostgreSQL enums!!!!!
+spring.datasource.hikari.data-source-properties.stringtype=unspecified
+
 # general
 app.title=OctiPod
 app.description=OctiPod
