--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,7 +2,7 @@
 # datasource
 db.host=95.217.108.112
 db.port=5432
-db.username=octipod
+db.username=tipod
 db.password=YDRPj943KOtoWOhy
 
 app.url=http://localhost:8080
