--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 server.address=0.0.0.0
 server.port=8080
 
-# datasource /octipod
+# datasource / tipod
 spring.datasource.url=jdbc:postgresql://${db.host}:${db.port}/postgres
 spring.datasource.username=${db.username}
 spring.datasource.password=${db.password}
@@ -12,8 +12,8 @@ spring.datasource.password=${db.password}
 spring.datasource.hikari.data-source-properties.stringtype=unspecified
 
 # general
-app.title=OctiPod
-app.description=OctiPod
+app.title=tiPod
+app.description=tiPod
 app.version=${app.version}
 app.url=${app.url}
 
